crates/pardosa-mint-private-tests/tests/id_minting_compile_fail/event_id_new.rs
use pardosa::store::EventId;
fn _no_external_event_id_mint() {
    let _ = EventId::new(42);
}
fn main() {}
